fixed layout issues in dashboard

--- a/src/app/pages/dashboard/dashboard.scss
+++ b/src/app/pages/dashboard/dashboard.scss
@@ -1,19 +1,21 @@
 .dashboard-grid {
-  width: calc(100% - 5px);
+  /* width: calc(100% - 5px); */
   height: calc(100% - 5px);
   overflow-y: auto;
   overflow-x: hidden;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: flex-start;
+  /* justify-content: space-between;
+  align-content: flex-start; */
   padding: 0 10px;
   .dashboard-grid-item {
     border: 1px solid #ccc;
     width: 120px;
     height: 120px;
-    margin: 10px 3px;
+    max-width: 150px;
+    max-height: 150px;
+    margin: 10px auto;
     display: flex;
     flex-direction: column;
     align-content: center;
